gccida/c3/df_bb_ru_local_compute
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2171:4: error: expected ';' after expression
rtx insn; // [rsp+50h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2171:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+50h] [rbp-20h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2174:17: error: expected identifier or '('
 struct bb_info = &df_0->bbs[bb->index]; 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2175:7: error: use of undeclared identifier 'insn'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2175:25: error: use of undeclared identifier 'insn'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2175:38: error: expected ')'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2175:5: note: to match this '('
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2178:6: error: use of undeclared identifier 'insn'
if ( insn ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2179:6: error: use of undeclared identifier 'insn'
v3 = insn != ( rtx)bb->head[1]; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2182:7: error: use of undeclared identifier 'insn'
uid = insn->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/df.c:2183:47: error: use of undeclared identifier 'insn'
if ( rtx_class[( unsigned __int16)*( _DWORD *)insn] == 105 ) 
                                              ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ru_local_compute/src/obj/df.o] Error 1
